// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ERC20TransferInfoLine Should match snapshot 1`] = `
.c0 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1.6rem;
  width: 1.6rem;
}

.c2 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

<div>
   
  <span
    class="c0"
  >
    <svg
      fill="currentColor"
      height="16"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.426 11.095-17-8A.999.999 0 0 0 3.03 4.242L4.969 12 3.03 19.758a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81zM5.481 18.197l.839-3.357L12 12 6.32 9.16l-.839-3.357L18.651 12l-13.17 6.197z"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    transfer
     
     
  </span>
  <span
    class="c0"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    <img
      alt="Avatar"
      class="c1 c2"
      data-testid="avatar"
      size="24"
      src="test"
    />
  </span>
  <span
    class="c0"
  >
    test.eth
  </span>
   
</div>
`;

exports[`ERC20TransferInfoLine Should match snapshot in compact mode 1`] = `
.c0 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1.6rem;
  width: 1.6rem;
}

.c2 {
  border-radius: 50%;
  height: 14px;
  width: 14px;
}

<div>
   
  <span
    class="c0"
  >
    <svg
      fill="currentColor"
      height="16"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.426 11.095-17-8A.999.999 0 0 0 3.03 4.242L4.969 12 3.03 19.758a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81zM5.481 18.197l.839-3.357L12 12 6.32 9.16l-.839-3.357L18.651 12l-13.17 6.197z"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
     
     
  </span>
  <span
    class="c0"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    <img
      alt="Avatar"
      class="c1 c2"
      data-testid="avatar"
      size="14"
      src="test"
    />
  </span>
  <span
    class="c0"
  >
    test.eth
  </span>
   
</div>
`;

exports[`ERC20TransferInfoLine Should match snapshot with default values 1`] = `
.c0 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1.6rem;
  width: 1.6rem;
}

.c2 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

<div>
   
  <span
    class="c0"
  >
    <svg
      fill="currentColor"
      height="16"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.426 11.095-17-8A.999.999 0 0 0 3.03 4.242L4.969 12 3.03 19.758a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81zM5.481 18.197l.839-3.357L12 12 6.32 9.16l-.839-3.357L18.651 12l-13.17 6.197z"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    transfer
     
     
  </span>
  <span
    class="c0"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    <img
      alt="Avatar"
      class="c1 c2"
      data-testid="avatar"
      size="24"
      src="test"
    />
  </span>
  <span
    class="c0"
  >
    test.eth
  </span>
   
</div>
`;

exports[`ERC20TransferInfoLine Should match snapshot with default values in compact mode 1`] = `
.c0 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1.6rem;
  width: 1.6rem;
}

.c2 {
  border-radius: 50%;
  height: 14px;
  width: 14px;
}

<div>
   
  <span
    class="c0"
  >
    <svg
      fill="currentColor"
      height="16"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.426 11.095-17-8A.999.999 0 0 0 3.03 4.242L4.969 12 3.03 19.758a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81zM5.481 18.197l.839-3.357L12 12 6.32 9.16l-.839-3.357L18.651 12l-13.17 6.197z"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
     
     
  </span>
  <span
    class="c0"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    <img
      alt="Avatar"
      class="c1 c2"
      data-testid="avatar"
      size="14"
      src="test"
    />
  </span>
  <span
    class="c0"
  >
    test.eth
  </span>
   
</div>
`;

exports[`ERC20TransferInfoLine Should match snapshot without data 1`] = `
.c0 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1.6rem;
  width: 1.6rem;
}

.c2 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

<div>
   
  <span
    class="c0"
  >
    <svg
      fill="currentColor"
      height="16"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.426 11.095-17-8A.999.999 0 0 0 3.03 4.242L4.969 12 3.03 19.758a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81zM5.481 18.197l.839-3.357L12 12 6.32 9.16l-.839-3.357L18.651 12l-13.17 6.197z"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    transfer
     
     
  </span>
  <span
    class="c0"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    <img
      alt="Avatar"
      class="c1 c2"
      data-testid="avatar"
      size="24"
      src="test"
    />
  </span>
  <span
    class="c0"
  >
    test.eth
  </span>
   
</div>
`;

exports[`ERC20TransferInfoLine Should match snapshot without data in compact mode 1`] = `
.c0 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  height: 1.6rem;
  width: 1.6rem;
}

.c2 {
  border-radius: 50%;
  height: 14px;
  width: 14px;
}

<div>
   
  <span
    class="c0"
  >
    <svg
      fill="currentColor"
      height="16"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.426 11.095-17-8A.999.999 0 0 0 3.03 4.242L4.969 12 3.03 19.758a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81zM5.481 18.197l.839-3.357L12 12 6.32 9.16l-.839-3.357L18.651 12l-13.17 6.197z"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
     
     
  </span>
  <span
    class="c0"
  >
    <svg
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </span>
  <span
    class="c0"
  >
    <img
      alt="Avatar"
      class="c1 c2"
      data-testid="avatar"
      size="14"
      src="test"
    />
  </span>
  <span
    class="c0"
  >
    test.eth
  </span>
   
</div>
`;
